<resources>
    <string name="app_name">SaveNoTPic</string>
    <!--settings.xml-->
    <string name="class1">Settings</string>
    <string name="directory">Saving Directory</string>
    <string name="share">Share Screenshot After Saving</string>
    <string name="sumOn">On</string>
    <string name="sumOff">Off</string>
    <string name="hideicon">Hide Icon From Launcher</string>
    <string name="hided">Hide icon from launcher successfully!</string>
    <string name="display">Bring back icon to launcher successfully!</string>
    <string name="class2">About</string>
    <string name="help">Help</string>
    <string name="version">Version</string>
    <string name="open">Open Source</string>
    <string name="openSum" translatable="false">https://github.com/smartjinyu/SaveNoTPic</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackSum">Contact me if any suggestions or complaints</string>
    <string name="sdcardFail">Error. Please specify it manually.</string>
    <string name="hide_title">Warning</string>
    <string name="hide_warnings">If you choose to hide the icon from the launcher, you may not be able to access to this Settings page anymore.
     You may have to clear app data and re-install SaveNoTPic to recover.\n Are you sure to hide the icon?</string>
    <string name="goon">Go on</string>
    <string name="back">Give up</string>
    <!--settings.xml-->
    <string name="needPer">We need Storage Permission to save screenshot to your sdcard.</string>
    <string name="shareTitle">SaveNoTPic</string>
    <string name="shareSucceed">Screenshot saved Successfully!</string>
    <string name="deleteSucceed">The Screenshot saved has deleted!</string>
    <string name="shareFail001" translatable="false">Error. File not found. Please report this bug, thanks.</string>
    <string name="shareFail002" translatable="false">Error. IOException(1). Please report this bug, thanks.</string>
    <string name="shareFail003" translatable="false">Error. IOException(2). Please report this bug, thanks.</string>
    <string name="shareFail004" translatable="false">Storage error. Please check your settings.</string>
    <string name="shareLater" translatable="false">Share Now on Tap Screenshot with...</string>
</resources>
