<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/class1">
        <Preference
            android:title="@string/directory"
            android:summary="0"
            android:key="pref_saveDir"/>
        <SwitchPreference
            android:title="@string/share"
            android:key="pref_share"
            android:defaultValue="false"
            android:summaryOn="@string/sumOn"
            android:summaryOff="@string/sumOff"/>
        <SwitchPreference
            android:title="@string/hideicon"
            android:key="pref_hide"
            android:defaultValue="false"
            android:summaryOn="@string/sumOn"
            android:summaryOff="@string/sumOff"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/class2">
        <Preference
            android:title="@string/help">
            <intent android:action="android.intent.action.VIEW"
            android:data="https://smartjinyu.com/savenotpic/2016/08/02/SaveNoTPic.html" />
        </Preference>
        <Preference
            android:title="@string/version"
            android:key="pref_version"/>
        <Preference
            android:title="@string/open"
            android:summary="@string/openSum">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/openSum" />
        </Preference>
        <Preference
            android:title="@string/feedback"
            android:summary="@string/feedbackSum"
            android:key="pref_feedback"/>
    </PreferenceCategory>
</PreferenceScreen>